--- a/gnash-common/trunk/PKGBUILD
+++ b/gnash-common/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=gnash-common
 pkgver=0.8.7
-pkgrel=1
+pkgrel=2
 pkgdesc="A GNU Flash movie player"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/gnash/"
 license=('GPL3')
-depends=('curl' 'giflib' 'boost' 'libldap' 'gstreamer0.10-base' 'gstreamer0.10-ffmpeg' 
+depends=('curl' 'giflib' 'boost>=1.42' 'libldap' 'gstreamer0.10-base' 'gstreamer0.10-ffmpeg' 
          'sdl' 'agg' 'libjpeg' 'libpng' 'libtool' 'speex' 'libxi' 'fontconfig')
 makedepends=('pkgconfig')
 provides=('gnash')
