--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,15 +3,15 @@
 
 pkgbase=libsoup
 pkgname=('libsoup' 'libsoup-gnome')
-pkgver=2.29.90
+pkgver=2.29.91
 pkgrel=1
 arch=(i686 x86_64)
 license=('LGPL')
-makedepends=('glib2>=2.23.3' 'gnutls>=2.8.5' 'libxml2>=2.7.6' 'libproxy>=0.2.3' 'sqlite3>=3.6.22' 'gconf>=2.28.0' 'libgnome-keyring>=2.29.4' 'intltool' 'pkgconfig')
+makedepends=('glib2>=2.23.4' 'gnutls>=2.8.5' 'libxml2>=2.7.6' 'libproxy>=0.2.3' 'sqlite3>=3.6.22' 'gconf>=2.28.0' 'libgnome-keyring>=2.29.4' 'intltool' 'pkgconfig' 'gobject-introspection')
 url="http://www.gnome.org"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgbase}/2.29/${pkgbase}-${pkgver}.tar.bz2)
 options=('!libtool' '!emptydirs')
-sha256sums=('9bae8b40a366fe6803b3f9400b7fe36c7c887d13869a0f8ef2d31b2f859feea8')
+sha256sums=('626c88f6b87463cb092733d2bcd5672ca69529a766cc6c5cc817f34b49c821b1')
 
 build() {
   cd "${srcdir}/${pkgbase}-${pkgver}"
@@ -22,7 +22,7 @@ build() {
 
 package_libsoup() {
   pkgdesc="GNOME HTTP Library - base library"
-  depends=('glib2>=2.23.3' 'libxml2>=2.7.6' 'gnutls>=2.8.5')
+  depends=('glib2>=2.23.4' 'libxml2>=2.7.6' 'gnutls>=2.8.5')
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
   make DESTDIR="${pkgdir}" install || return 1
