--- a/gnome-media/trunk/PKGBUILD
+++ b/gnome-media/trunk/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-media
-pkgver=2.28.5
+pkgver=2.29.91
 pkgrel=1
 pkgdesc="GNOME Media Tools"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libglade>=2.6.4' 'gstreamer0.10-good-plugins>=0.10.16' 'gstreamer0.10-base-plugins>=0.10.24' 'libcanberra>=0.14' 'hicolor-icon-theme')
-makedepends=('intltool' 'pkgconfig' 'gnome-doc-utils>=0.18.0' 'libunique>=1.1.2')
+depends=('glade>=3.6.7' 'gstreamer0.10-good-plugins>=0.10.18' 'gstreamer0.10-base-plugins>=0.10.26' 'libcanberra>=0.14' 'hicolor-icon-theme')
+makedepends=('intltool' 'pkgconfig' 'gnome-doc-utils>=0.19.5' 'libunique>=1.1.6')
 url="http://www.gnome.org"
 groups=('gnome')
 options=('!libtool' '!emptydirs')
 install=gnome-media.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.28/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('1d6a34b54aa01e811ac32ed7d24432b3beaffffc2c6278de412c7931f5488153')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('823e757aca594c2d6a1ff34a9c81fa3632fd0d72681d0c50d8f2ca45857a2cc4')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -24,7 +24,7 @@ build() {
       --disable-scrollkeeper || return 1
   make || return 1
   make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
-  
+
   install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
   gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" --domain gnome-media-2.0 ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
   rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
