--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,20 +2,20 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-disk-utility
-pkgver=2.28.1
-pkgrel=2
+pkgver=2.29.90
+pkgrel=1
 pkgdesc="GNOME libraries and applications for dealing with storage devices"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.gnome.org"
-depends=('dbus-glib>=0.82' 'libgnome-keyring>=2.29.4' 'libunique>=1.1.6' 'devicekit-disks>=009' 'libnotify>=0.4.5' 'hicolor-icon-theme')
-makedepends=('gnome-doc-utils' 'intltool')
+depends=('dbus-glib>=0.82' 'libgnome-keyring>=2.29.4' 'libunique>=1.1.6' 'udisks>=1.0.0' 'libnotify>=0.4.5' 'hicolor-icon-theme' 'avahi')
+makedepends=('gnome-doc-utils>=0.19.5' 'intltool')
 replaces=('gnome-mount')
 conflicts=('gnome-mount')
 options=('!libtool' '!emptydirs' '!makeflags')
 install=gnome-disk-utility.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.28/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('ed7d75f16b84cd251ad24385d57ea73805e3e8f193e517df42b0407004066db8')
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('525eb68584ff840a85a8c6ed00b5e944060a6b5fb2bceb90a73f46c5f0f9f6b7')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
