--- a/gvfs/trunk/PKGBUILD
+++ b/gvfs/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=gvfs
 pkgver=1.5.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Userspace virtual filesystem implemented as a pluggable module for gio"
 arch=('i686' 'x86_64')
 license=('LGPL')
@@ -12,11 +12,14 @@ makedepends=('pkgconfig' 'intltool')
 install=gvfs.install
 url="http://www.gnome.org"
 options=(!libtool)
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.5/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('c7e23851681875a04bd6697657433a204be9e6895a845ca3cb5ee573ca17ab02')
-
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.5/${pkgname}-${pkgver}.tar.bz2
+	fix_dbus_service.patch)
+sha256sums=('c7e23851681875a04bd6697657433a204be9e6895a845ca3cb5ee573ca17ab02'
+	    'ee428390392f4c184a4069b3a6955a65ffcafe0c14be053a71cb509eabb409d4')
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i ${srcdir}/fix_dbus_service.patch || return 1
+  autoreconf -fi || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
       --localstatedir=/var --disable-static \
       --libexecdir=/usr/lib/gvfs || return 1
