--- a/sylpheed/trunk/PKGBUILD
+++ b/sylpheed/trunk/PKGBUILD
@@ -4,21 +4,22 @@
 
 pkgname=sylpheed
 pkgver=3.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Lightweight and user-friendly e-mail client"
 arch=('i686' 'x86_64')
 url="http://sylpheed.sraoss.jp/en/"
 license=('GPL')
-depends=('gpgme' 'gtk2')
-makedepends=('compface')
+depends=('gpgme' 'gtkspell')
+makedepends=('compface' 'openssl')
 options=('libtool')
-source=(http://sylpheed.sraoss.jp/sylpheed/v3.0/sylpheed-$pkgver.tar.bz2)
+source=(http://sylpheed.sraoss.jp/${pkgname}/v3.0/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('bb2cf4adfa9577746f54a516e9471bfd')
 
 build() {
-  cd "$srcdir/sylpheed-$pkgver"
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
-  ./configure --prefix=/usr --enable-ldap --disable-gtkspell || return 1
+  ./configure --prefix=/usr \
+              --enable-ldap || return 1
   make || return 1
-  make DESTDIR="$pkgdir" install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
