--- a/hamster-applet/trunk/PKGBUILD
+++ b/hamster-applet/trunk/PKGBUILD
@@ -3,19 +3,19 @@
 # Contributor: Georg Vogetseder <georg.vogetseder@gmail.com>
 
 pkgname=hamster-applet
-pkgver=2.28.2
+pkgver=2.29.91
 pkgrel=1
 pkgdesc="GNOME time tracking applet"
 arch=('i686' 'x86_64')
 url="http://projecthamster.wordpress.com/"
 license=('GPL')
-depends=('gnome-python>=2.28.0' 'python-pysqlite>=2.5.5' 'gnome-python-desktop>=2.28.0' 'dbus-python>=0.83.0' 'gnome-panel>=2.28.0')
-makedepends=('intltool')
+depends=('gnome-python>=2.28.0' 'python-pysqlite>=2.5.5' 'gnome-python-desktop>=2.29.1' 'dbus-python>=0.83.0' 'gnome-panel>=2.29.91')
+makedepends=('intltool' 'gnome-doc-utils>=0.19.5')
 options=('!libtool' '!emptydirs')
 groups=('gnome-extra')
 install=hamster-applet.install
-source=(ftp://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.28/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('bed7b97ee37e6669298670121dcf06a1456b9b827099158becf645008702e608')
+source=(ftp://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('37f674c260fb187b9d8285bb4e2b69e451d38e1f740504e61d96f511221af6c1')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
