--- a/evince/trunk/PKGBUILD
+++ b/evince/trunk/PKGBUILD
@@ -2,21 +2,21 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=evince
-pkgver=2.29.5
+pkgver=2.29.91
 pkgrel=1
 pkgdesc="Simply a document viewer"
 url="http://www.gnome.org"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libspectre>=0.2.3' 'gsfonts' 'poppler-glib>=0.12.3' 'libdjvu>=3.5.22' 'gnome-icon-theme>=2.28.0' 't1lib' 'libgnome-keyring>=2.29.4' 'desktop-file-utils')
-makedepends=('gnome-doc-utils>=0.18.0' 'nautilus>=2.29.90' 'pkgconfig' 'texlive-bin' 'intltool')
+makedepends=('gnome-doc-utils>=0.19.5' 'nautilus>=2.29.91' 'pkgconfig' 'texlive-bin' 'intltool')
 optdepends=('texlive-bin: DVI support')
 replaces=('gpdf')
 groups=('gnome-extra')
 install=evince.install
 options=('!libtool' '!emptydirs')
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('5e2f0579d64ea2bcba17a0164f1b6e48773637b71a20d631aae1bc036df3634c')
+sha256sums=('e41a6dcb50327bae6f693088f06a2a7443ae6e363d7162ce76a4d06719eed638')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
