--- a/libwebkit/trunk/PKGBUILD
+++ b/libwebkit/trunk/PKGBUILD
@@ -2,20 +2,20 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=libwebkit
-pkgver=1.1.21
-pkgrel=2
+pkgver=1.1.22
+pkgrel=1
 pkgdesc="an opensource web content engine, derived from KHTML and KJS from KDE"
 arch=('i686' 'x86_64')
 url="http://webkitgtk.org/"
 license=('custom')
-depends=('libxt' 'libxslt' 'sqlite3>=3.6.22' 'gtk2>=2.19.5-2' 'icu>=4.2' 'gstreamer0.10-base>=0.10.26' 'libsoup>=2.29.90' 'enchant>=1.5.0')
+depends=('libxt' 'libxslt' 'sqlite3>=3.6.22' 'gtk2>=2.19.6' 'icu>=4.2' 'gstreamer0.10-base>=0.10.26' 'libsoup>=2.29.91' 'enchant>=1.5.0')
 makedepends=('gperf' 'gtk-doc>=1.11' 'gir-repository')
 provides=('webkitgtk-svn')
 conflicts=('webkitgtk-svn')
 replaces=('webkitgtk-svn')
 options=('!libtool')
 source=(http://webkitgtk.org/webkit-${pkgver}.tar.gz)
-md5sums=('8957bcffd0a0394a75f8f7936ab270bc')
+md5sums=('2c07cbf3ac577cf5f6b3c10861a0e051')
 
 build() {
   cd "${srcdir}/webkit-${pkgver}"
