--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=brasero
-pkgver=2.29.90
-pkgrel=2
+pkgver=2.29.91
+pkgrel=1
 pkgdesc="A disc burning application for Gnome"
 arch=('i686' 'x86_64')
 url="http://www.gnome.org/projects/brasero"
@@ -21,10 +21,10 @@ optdepends=('libburn: alternative back-end'
 replaces=('nautilus-cd-burner')
 install=brasero.install
 source=(http://ftp.gnome.org/pub/gnome/sources/brasero/2.29/brasero-${pkgver}.tar.bz2)
-sha256sums=('fad7351f8c6ef12e2143df06b43264376e74ebfa2790f5bf232d5a56d6b37b6d')
+sha256sums=('2ec73979beb56087b9aa97d0e5dcd5fa1ce114d11981b48d334997a40865835d')
 
 build() {
-  cd "${srcdir}/brasero-${pkgver}"
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var --disable-caches || return 1
   make || return 1
   make -j1 GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${pkgdir} install || return 1
