--- a/nvidia/trunk/PKGBUILD
+++ b/nvidia/trunk/PKGBUILD
@@ -2,30 +2,29 @@
 # Maintainer : Thomas Baechler <thomas@archlinux.org>
 
 pkgname=nvidia
-pkgver=190.53
-_kernver='2.6.32-ARCH'
-pkgrel=4
+pkgver=195.36.08
+_kernver='2.6.33-ARCH'
+pkgrel=1
 pkgdesc="NVIDIA drivers for kernel26."
 arch=('i686' 'x86_64')
 [ "$CARCH" = "i686"   ] && ARCH=x86
 [ "$CARCH" = "x86_64" ] && ARCH=x86_64
 url="http://www.nvidia.com/"
-depends=('kernel26>=2.6.32.3' 'kernel26<2.6.33' "nvidia-utils=${pkgver}")
-makedepends=('kernel26-headers>=2.6.32' 'kernel26-headers<2.6.33')
+depends=('kernel26>=2.6.33' 'kernel26<2.6.34' "nvidia-utils=${pkgver}")
+makedepends=('kernel26-headers>=2.6.33' 'kernel26-headers<2.6.34')
 conflicts=('nvidia-96xx' 'nvidia-173xx')
 license=('custom')
 install=nvidia.install
 source=("http://download.nvidia.com/XFree86/Linux-$ARCH/${pkgver}/NVIDIA-Linux-$ARCH-${pkgver}-pkg0.run")
-md5sums=('2e80419f6f9ac16beecd839874d0c5ab')
-[ "$CARCH" = "x86_64" ] && md5sums=('3d3e956366f9df0e4c64d2e0299d1029')
+md5sums=('7b78eed78b5f345af6dd1b2a83f5d44b')
+[ "$CARCH" = "x86_64" ] && md5sums=('854852a02595eda776e7a67573304eeb')
 build() {
 	cd $srcdir
 	sh NVIDIA-Linux-$ARCH-${pkgver}-pkg0.run --extract-only
 	cd NVIDIA-Linux-$ARCH-${pkgver}-pkg0
-
 	cd usr/src/nv/
 	ln -s Makefile.kbuild Makefile
-	make SYSSRC=/lib/modules/${_kernver}/build module || return 1
+	make SYSSRC=/lib/modules/${_kernver}/build  SYSINCLUDE=/lib/modules/${_kernver}/build/include module || return 1
 
 	mkdir -p $pkgdir/lib/modules/${_kernver}/kernel/drivers/video/
 	install -m644 nvidia.ko $pkgdir/lib/modules/${_kernver}/kernel/drivers/video/
