--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -23,8 +23,7 @@ build() {
 	sh NVIDIA-Linux-$ARCH-${pkgver}-pkg0.run --extract-only
 	cd NVIDIA-Linux-$ARCH-${pkgver}-pkg0
 	cd usr/src/nv/
-	ln -s Makefile.kbuild Makefile
-	make SYSSRC=/lib/modules/${_kernver}/build  SYSINCLUDE=/lib/modules/${_kernver}/build/include module || return 1
+	make SYSSRC=/lib/modules/${_kernver}/build module || return 1
 
 	mkdir -p $pkgdir/lib/modules/${_kernver}/kernel/drivers/video/
 	install -m644 nvidia.ko $pkgdir/lib/modules/${_kernver}/kernel/drivers/video/
