--- a/vlc/trunk/PKGBUILD
+++ b/vlc/trunk/PKGBUILD
@@ -77,7 +77,8 @@ package_vlc() {
            'libshout' 'libmad' 'fribidi' 'libmpeg2' 'libmodplug'
            'avahi' 'ttf-freefont' 'libxv' 'libass' 'xdg-utils' 'libcdio')
   optdepends=('libnotify: for notification plugin' 
-              'ncurses: for ncurses interface support')
+              'ncurses: for ncurses interface support'
+              'libdvdcss: for decoding encrypted DVDs')
   options=('!libtool')
   install=vlc.install
   cd "${srcdir}/${pkgbase}-${pkgver}"
