--- a/vlc/trunk/PKGBUILD
+++ b/vlc/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=vlc
 pkgname=('vlc' 
          'vlc-plugin')
 pkgver=1.0.5
-pkgrel=3
+pkgrel=4
 arch=('i686' 'x86_64')
 url="http://www.videolan.org/vlc/"
 license=('GPL')
@@ -70,15 +70,16 @@ build() {
 
 package_vlc() {
   pkgdesc="A multi-platform MPEG, VCD/DVD, and DivX player"
-  depends=('a52dec' 'fluidsynth' 'libmtp' 'libdvbpsi' 'lirc-utils'
+  depends=('a52dec' 'fluidsynth' 'libmtp' 'libdvbpsi' 'libcdio'
            'libdca' 'qt' 'libproxy' 'sdl_image' 'libdvdnav' 'mesa'
            'lua' 'libv4l' 'libcddb' 'smbclient' 'libmatroska' 'zvbi'
            'taglib' 'sysfsutils' 'libmpcdec' 'hal' 'ffmpeg'
            'libshout' 'libmad' 'fribidi' 'libmpeg2' 'libmodplug'
-           'avahi' 'ttf-freefont' 'libxv' 'libass' 'xdg-utils' 'libcdio')
+           'avahi' 'ttf-freefont' 'libxv' 'libass' 'xdg-utils')
   optdepends=('libnotify: for notification plugin' 
               'ncurses: for ncurses interface support'
-              'libdvdcss: for decoding encrypted DVDs')
+              'libdvdcss: for decoding encrypted DVDs'
+              'lirc-utils: for lirc plugin')
   options=('!libtool')
   install=vlc.install
   cd "${srcdir}/${pkgbase}-${pkgver}"
