--- a/libjpeg/trunk/PKGBUILD
+++ b/libjpeg/trunk/PKGBUILD
@@ -3,20 +3,21 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=libjpeg
-pkgver=8
-pkgrel=2
+pkgver=8.0.1
+_pkgver=8a
+pkgrel=1
 pkgdesc="Library of JPEG support functions"
 arch=('i686' 'x86_64')
 url="http://www.ijg.org/"
 license=('custom')
 depends=('glibc')
 makedepends=('libtool')
-options=(!libtool)
-source=(http://www.ijg.org/files/jpegsrc.v8.tar.gz)
-md5sums=('9c6b3514e922ad42298706163bb5e2d7')
+options=('!libtool')
+source=(http://www.ijg.org/files/jpegsrc.v${_pkgver}.tar.gz)
+md5sums=('5146e68be3633c597b0d14d3ed8fa2ea')
 
 build() {
-  cd $srcdir/jpeg-$pkgver
+  cd $srcdir/jpeg-${_pkgver}
   ./configure --prefix=/usr --enable-shared --enable-static
   make || return 1
   make prefix=$pkgdir/usr mandir=$pkgdir/usr/share/man install
